# glical

./: .gitignore  LICENCE.md  META  Makefile  Makefile.lib  Makefile.opam  PLAY.md  README.md  glical.ml  glical.mli  glical_bin.ml  glical_cat.ml  glical_kernel.ml  glical_kernel.mli  glical_test.ml  glical_tool.ml  glical_tool.mli  make_opam.bash  opam  tz-example.ics
