build:glical.cma glical.cmxa glical

install:glical.cma glical.cmxa glical.a glical.mli glical.cmi glical.cmo glical.cmx glical_kernel.cmi glical_kernel.mli glical_kernel.cmo glical_kernel.cmx glical_bin.cmo glical_bin.cmx
	mkdir -p ${PREFIX}/lib/glical/
	ocamlfind install -destdir ${PREFIX}/lib glical $+ META
	cp $+ ${PREFIX}/lib/glical/
	cp glical ${PREFIX}/bin/

uninstall:
	ocamlfind remove -destdir ${PREFIX}/lib glical
	rm -f ${PREFIX}/lib/glical/glical.cm{a,xa}
	-rmdir ${PREFIX}/lib/glical
	rm -f ${PREFIX}/bin/glical

include Makefile.prefix

include Makefile.lib

include Makefile.bin

